# blog

./: .gitignore  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/: settings.py  storages_backends.py  urls.py
apps/blog/: admin.py  forms.py  models.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py  0002_alter_article_id.py  0003_article_is_published.py  0004_article_subtitle.py
apps/blog/static/css/: styles.css
apps/blog/templates/blog/: about.html  article_detail.html  article_list.html  base.html  contact.html  index.html  post.html
apps/templates/: base.html
apps/templates/flatpages/: coding-chanllenges.html  default.html
blog/: settings.py  urls.py
